--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,8 +9,19 @@ body {
     cursor: default;
     max-width: 100vw;
     width: 100vw;
-    overflow-x: hidden;
 }
+
+*::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    *::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background-color: #12f7ff;
+    }
 
 
 @font-face {
