--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
+<!-- <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
 <app-contact></app-contact>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
