--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -63,9 +63,10 @@
             <img src="assets/img/profile-shadow-right.png">
             <img src="assets/img/character.png">
         </div>
+
         <div class="profile-content-right">
+            <span class="pretext-info-profile">I am</span>
             <div class="info-profile">
-                <span class="pretext-info-profile">I am</span>
                 <div class="subinfo-profile">
                     <div>Denise Siegl</div>
                     <div>FRONTEND DEVELOPER</div>
@@ -77,7 +78,7 @@
 
 
     <img class="banner" src="assets/img/banner.png">
-    <div class="info-icons">
+   <!--  <div class="info-icons">
         <img src="assets/img/line-info-profile.png">
         <a *ngFor="let icon of is.infoIcons" href="{{ icon.url }}" target="{{!icon.url.includes('#')  ? '_blank' : '_self'}}">
             <img src="{{ icon.image }}">
@@ -89,7 +90,7 @@
             <p class="scroll-info">Scroll down</p>
             <img src="assets/img/arrow-down.png">
         </div>
-    </div>
+    </div> -->
 </div>
 
 <!-- <section class="home" id="home">
@@ -97,6 +98,7 @@
         <div class="img-box">
             <img class="img-home" src="/assets/img/my-img.png">
         </div>
+
         <div class="home-content">
             <span class="traslate">I am</span>
             <div class="change-text">
