--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -30,6 +30,19 @@
         }
     }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
     .profile-content-right {
         display: flex;
         flex-direction: column;
@@ -90,14 +103,16 @@
             }
         }
     }
-    .banner {
-        position: absolute;
-        z-index: -2;
-        top: 350px;
-        height: 100%;
-        
-    }
+   
 }
+
+
+
+
+
+
+
+
 
 .info-content {
     display: flex;
@@ -227,8 +242,7 @@
     }
 }
 
-@media only screen and (max-width: 1000px) {
-}
+
     
 
 
@@ -249,13 +263,14 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        margin-top: 10px;
         .profile {
-           position: relative;
+            position: relative;
             img:nth-child(1) {
-                width: 38.861vw;
+                width: 36.861vw;
                 position: absolute;
                 left: -3.778vw;
-                top: 0vw;
+                top: 3vw;
                 z-index: -1;
             }
             img:nth-child(2) {
@@ -277,23 +292,29 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
+            padding-left: 10px;
+            height: 20vw;
+            padding-bottom: 20px;
+            .pretext-info-profile {
+                position: absolute;
+                top: 0;
+                transform: rotate(-90deg);
+                width: max-content;
+                font-size: 4.444vw;
+                color: var(--white);
+                height: -moz-fit-content;
+                height: fit-content;
+                margin-top: 10%;
+                left: -22%;
+            }
             .info-profile {
-                .pretext-info-profile {
-                    position: absolute;
-                    top: 0;
-                    display: inline-block;
-                    transform: rotate(-90deg);
-                    width: max-content;
-                    font-size: clamp(2.5rem, -0.625rem + 5vw, 4.375rem);
-                    color: var(--white);
-                    height: -moz-fit-content;
-                    height: fit-content;
-                    margin-top: 10%;
-                    left: -18%;
-                }
                 .subinfo-profile {
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    align-items: flex-start;
                     div:nth-child(1) {
-                        font-size: clamp(3.75rem, -1.875rem + 7.5vw, 5.625rem);
+                        font-size: 4.833vw;
                         font-weight: 900;
                         color: var(--white);
                         font-family: 'Poppins';
@@ -305,9 +326,9 @@
                         position: absolute;
                         display: flex;
                         width: max-content;
-                        font-size: clamp(2rem, .1761945392rem + 3.0716723549vw, 3.125rem);
+                        font-size: 3.3vw;
                         font-weight: 600;
-                        top: clamp(5.438rem, 5.143vw + 2.223rem, 7.688rem);
+                        top: 8vw;
                     }
                 }
             }
@@ -335,40 +356,75 @@
             }
         }
     }
-}
-
-
-/* 
-@media only screen and (max-width: 1550px) {
-    .profile {
-        img {
-            bottom: 14%;
-        }
+    .banner {
+        position: absolute;
+        width: calc(100vw - 10px);
+        top: 34vw;
     }
 }
 
-@media only screen and (max-width: 1150px) {
-    .profile {
-        img {
-            bottom: 16%;
-        }
-    }
-}
 
-@media only screen and (max-width: 1050px) {
-    .profile {
-        img {
-            bottom: 17%;
-        }
-    }
-}
 
 @media only screen and (max-width: 1000px) {
-    .profile {
-        display: flex;
-        img {
-            position: static;
-            width: clamp(14rem, 26.528vw + 9.358rem, 25.938rem);
+    .about-me-content {
+        .my-profile-container {
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 40px;
+            .profile {
+                display: flex;
+                img:nth-child(1) {
+                    width: 87.861vw;
+                    left: -12vw;
+                }
+                img:nth-child(2) {
+                    width: 77.764vw;
+                    right: -9.444vw;
+                    top: -6.403vw;
+                    z-index: -2;
+                }
+                img:nth-child(3) {
+                    width: 80vw;
+                }
+            }
+            .profile-content-right {
+                z-index: 10;
+                margin-top: -130px;
+                .pretext-info-profile {
+                    font-size: 7vw;
+                }
+                .subinfo-profile {
+                    div:nth-child(1) {
+                        font-size: 7vw !important;
+                    }
+                    div:nth-child(2) {
+                        top: 13vw !important;
+                        font-size: 4.65vw !important;
+                        letter-spacing: unset !important;
+                    }
+                    
+                }
+                button {
+                    margin-top: 100px;
+                }
+            }
+        }
+        .banner {
+            top: 74vw;
         }
     }
-} */
+}
+
+@media  only screen and (min-width:2000px) {
+    button {
+        width: 11.458vw !important;
+        height: 4.028vw !important;
+        font-size: 1.597vw !important;
+        border-radius: 0.694vw !important;
+        &:hover {
+            width: 12.847vw !important;
+            height: 4.722vw !important;
+        }
+    }
+    
+}
