--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,16 @@
-html {
+* {
+    margin: 0;
+    padding: 0;
     scroll-behavior: smooth;
+    cursor: default;
 }
 
 body {
-    margin: 0;
     font-family: 'Poppins', sans-serif;
     background-color: #141D2F;
-    cursor: default;
     max-width: 100vw;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 *::-webkit-scrollbar {
