--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,174 +1,5 @@
-/* .about-me-section { 
-    margin-top: 114px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    .profile {
-        width: 578px;
-        height: 510px;
-        position: relative;
-        z-index: -2;
-        img:nth-child(1) {
-            width: 646px;
-            position: absolute;
-            left: -40px;
-            top: 0px;
-            z-index: -1;
-        }
-        img:nth-child(2) {
-            width: 515px;
-            position: absolute;
-            right: -136px;
-            top: 95px;
-            z-index: -1;
-        }
-        img:nth-child(3) {
-            width: 610px;
-            height: 660px;
-            margin-left: 60px;
-        }
-    }
+/* 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    .profile-content-right {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-right: 87px;
-        justify-content: space-between;
-        position: absolute;
-        right: 0;
-        .info-profile {
-            cursor: default;
-            display: flex;
-        }
-        .pretext-info-profile {
-            color: var(--white);
-            font-size: 64px;
-            writing-mode: vertical-rl;
-            transform: rotate(180deg); 
-            margin-right: 20px;
-            line-height: 77px;
-            letter-spacing: 5px;
-        }
-        .subinfo-profile {
-            display: flex;
-            flex-direction: column;
-            div:nth-child(1) {
-                color: var(--white);
-                font-size: 84px;
-                font-family: 'Poppins bold';
-                letter-spacing: 6.2px;
-            }
-            div:nth-child(2) {
-                color: var(--purple);
-                font-size: 58px;
-                line-height: 46px;
-                padding-top: 8px;
-            }
-        }
-        button {
-            width: 165px;
-            height: 58px;
-            border-radius: 10px;
-            margin-top: 50px;
-            font-size: 23px;
-            padding: 15px 30px;
-            gap: 10px;
-            background-color: var(--light-blue);
-            color: var(--white);  
-            z-index: 1;
-            cursor: pointer;
-            transition: 0.2s ease-in;
-            border: none;
-            &:hover {
-                background-color: var(--purple);
-                width: 185px;
-                height: 68px;
-                transition: 0.2s ease-in;
-                margin-top: 40px;
-            }
-        }
-    }
-   
-}
-
-
-
-
-
-
-
-
-
-.info-content {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 100px;
-    z-index: 1;
-    .info-icons {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 658px;
-        img:nth-child(1) {
-            margin-left: -46px;
-        }
-        img {
-            cursor: pointer;
-            transition: 0.2s ease-in;
-            &:hover {
-                transform: scale(1.5);
-                transition: 0.2s ease-in;
-            }
-        }
-        p {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-                cursor: pointer;
-                width: 250px;
-                padding-bottom: 4px;
-                &:hover {
-                    transform: unset!important;
-                    transition: unset!important;
-                }
-            }
-        }
-    }
-    .scroll {
-        display: flex;
-        align-items: center;
-        margin-top: -130px;
-        margin-right: 70px;
-        writing-mode: vertical-rl;
-        .scroll-info {
-            color: var(--white);
-            font-size: 23px;
-            z-index: 1;
-        }
-        img {
-            width: 16px;
-            margin-top: 10px;
-            margin-right: 4px;
-            z-index: 1;
-        }
-    }
-}
 
 .scroll-down-shadow {
     width: 250px;
@@ -241,12 +72,6 @@
         }
     }
 }
-
-
-    
-
-
-
 
  */
 
@@ -352,6 +177,73 @@
         width: calc(100vw - 10px);
         top: 34vw;
     }
+
+
+    /* --------------------------------- */
+    .info-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 2;
+        width: 100%;
+        padding-left: 3vw;
+        box-sizing: border-box;
+        margin-top: -3vw;
+        .line-info-profile {
+            position: absolute;
+            left:0;
+            width: 10vw;
+        }
+        .info-icons {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            z-index: 2;
+            width: 35vw;
+            img {
+                cursor: pointer;
+                transition: 0.2s ease-in;
+                width: 2.083vw;
+                height: 2.083vw;
+                &:hover {
+                    transform: scale(1.5);
+                    transition: 0.2s ease-in;
+                }
+            }
+            p {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    content:url("/assets/img/email-image.png");
+                    width: 23vw;
+                    padding-bottom: 4px;
+                    &:hover {
+                        transform: unset;
+                        transition: unset;
+                    }
+                }
+            }
+        }
+        .scroll {
+            display: flex;
+            align-items: center;
+            margin-top: -10vw;
+            writing-mode: vertical-rl;
+            .scroll-info {
+                color: var(--white);
+                font-size: 1.597vw;
+                z-index: 1;
+            }
+            img {
+                width: 1.111vw;
+                margin-top: 10px;
+                margin-right: 4px;
+                z-index: 1;
+            }
+        }
+        
+    }
 }
 
 
@@ -394,13 +286,45 @@
                     } 
                 }
                 button {
-                    margin-top: 29%;
+                    margin-top: 29% !important;
                 }
             }
         }
         .banner {
             top: 74vw;
         }
+        .info-content {
+            margin-top: 5vw !important;
+            .line-info-profile {
+                width: 15vw !important;
+            }
+            .info-icons {
+                width: 57vw !important;
+                justify-content: space-evenly !important;
+                margin-left: 8vw;
+                p {
+                    img {
+                        content:url("/assets/img/email.png") !important;
+                        width: 8vw !important;
+                        height: 8vw !important;
+                        &:hover {
+                            transform: scale(1.5) !important;
+                            transition: 0.2s ease-in !important;
+                        }
+                    }
+                }
+                img {
+                    width: 8vw !important;
+                    height: 8vw !important;
+                }
+            }
+            .scroll  {
+                img, p { 
+                    display: none;
+                }
+            }
+        }
+        
     }
 }
 
