finish responsive style about-me-section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-content" id="header">
+<div class="home-content" id="header">
     <div class="my-profile-container">
         <div class="profile">
             <img src="assets/img/profile-shadow-left.png">
@@ -18,13 +18,6 @@
 
     <img class="banner" src="assets/img/banner.png">
 
-    <!-- <div class="home-socials">
-            <div class="left-line"></div>
-            <a href="https://github.com/HosnyFahim" target="_blank"><img src="./assets/icons/github.svg"></a>
-            <a href="https://linkedin.com/in/hosny-fahim-860766236" target="_blank"><img
-                src="./assets/icons/linkedin.svg"></a>
-            <a href="mailto: hosny.fahim1990@gmail.com" target="_blank"><img class="mail" src="./assets/icons/mail.svg"></a>
-        </div> -->
     <div class="info-content">
         <img class="line-info-profile" src="assets/img/line-info-profile.png">
         <div class="info-icons">
@@ -35,14 +28,16 @@
                 <img (click)="scroll('contact')" routerLink="/contact">
             </p>
         </div>
+
         <div class="scroll">
             <p class="scroll-info">Scroll down</p>
             <img src="assets/img/arrow-down.png">
         </div>
     </div>
 </div>
-<!-- 
+
 <div class="about-me-content" #myaboutme>
+    <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
     <div class="content-left">
         <div id="aboutMe" class="header-about-me-content">About Me</div>
         <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
@@ -50,6 +45,7 @@
             <img src="assets/img/idea.png">
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis</div>
         </div>
+
         <div class="subinfo-second">
             <img src="assets/img/puzzle.png">
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis</div>
@@ -61,4 +57,5 @@
     </div>
 </div>
 
-<img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png"> -->
+
+
