--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,83 +1,4 @@
-/* 
-
-
-.scroll-down-shadow {
-    width: 250px;
-    position: absolute;
-    top: 700px;
-    right: 0;
-}
-
-.about-me-content {
-    color: var(--white);
-    padding-left: 115px;
-    padding-top: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .content-left {
-        width: 452px;
-    }
-    .header-about-me-content {
-        font-size: 90px;
-        font-family: 'Poppins bold';
-    }
-    .present-text {
-        font-size: 16px;
-        margin-bottom: 20px;
-    }
-    .subinfo-first, .subinfo-second {
-        display: flex;
-        align-items: center;
-        font-size: 16px;
-        padding-left: 20px;
-        margin-bottom: 20px;
-        img {
-            width: 34.47px;
-            height: 50px;
-            object-fit: contain;
-            margin-right: 20px;
-            transition: 0.2s ease-in;
-            &:hover {
-                transform: scale(1.3);
-                transition: 0.2s ease-in;
-            }
-        }
-    }
-    .subinfo-second {
-        img {
-            width: 42px;
-            margin-right: 14px;
-        }
-    }
-    .profile-round-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 680px;
-        z-index: 1;
-        position: relative;
-        .profile-round {
-            border: 4px solid var(--light-blue);
-            border-radius: 100%;
-            position: absolute;
-            width: 65%;
-            left: 0;
-        }
-        .line-profile-round {
-            height: 4px;
-            position: absolute;
-            width: 34%;
-            right: 0;
-        }
-    }
-}
-
- */
-
-
-
-.about-me-content {
+.home-content {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -177,9 +98,6 @@
         width: calc(100vw - 10px);
         top: 34vw;
     }
-
-
-    /* --------------------------------- */
     .info-content {
         display: flex;
         justify-content: space-between;
@@ -241,14 +159,84 @@
                 margin-right: 4px;
                 z-index: 1;
             }
+        } 
+    }
+}
+
+.about-me-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 11%;
+    position: relative;
+    color: var(--white);
+    box-sizing: border-box;
+    .scroll-down-shadow {
+        position: absolute;
+        right: 0;
+    }
+    .content-left {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        z-index: 1;
+    }
+    .header-about-me-content {
+        font-size: 6.25vw;
+        font-family: 'Poppins bold';
+    }
+    .present-text {
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+    .subinfo-first, .subinfo-second {
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        padding-left: 20px;
+        margin-bottom: 20px;
+        img {
+            width: 34.47px;
+            height: 50px;
+            object-fit: contain;
+            margin-right: 20px;
+            transition: 0.2s ease-in;
+            &:hover {
+                transform: scale(1.3);
+                transition: 0.2s ease-in;
+            }
         }
-        
+    }
+    .subinfo-second {
+        img {
+            width: 42px;
+            margin-right: 14px;
+        }
+    }
+    .profile-round-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 37%;
+        z-index: 1;
+        position: absolute;
+        right: 0;
+        .profile-round {
+            border: 4px solid var(--light-blue);
+            border-radius: 100%;
+            width: 65%;
+        }
+        .line-profile-round {
+            height: 4px;
+            width: 34%;
+        }
     }
 }
 
 
 @media only screen and (max-width: 1000px) {
-    .about-me-content {
+    .home-content {
         .my-profile-container {
             flex-direction: column;
             gap: 20px;
@@ -324,7 +312,19 @@
                 }
             }
         }
-        
+    }
+    .content-left {
+        width: 100% !important;
+    }
+    .about-me-content {
+        .header-about-me-content {
+            font-size: 45px !important;
+        }
+        .profile-round-container {
+            img {
+                display: none !important;
+            }
+        }
     }
 }
 
@@ -336,7 +336,7 @@
     }
 }
 
-@media  only screen and (min-width:2000px) {
+@media  only screen and (min-width:2000px)  {
     button {
         width: 11.458vw !important;
         height: 4.028vw !important;
