--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -101,7 +101,7 @@ header {
 
 @media (max-width: 856px) {
     header {
-        padding: 20px 50px; 
+        padding: 1rem 9%;
         height: 40px;
         nav {
             display: none;
