--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -111,6 +111,7 @@
             position: absolute;
             left:0;
             width: 10vw;
+            height: 4px;
         }
         .info-icons {
             display: flex;
@@ -175,6 +176,7 @@
     .scroll-down-shadow {
         position: absolute;
         right: 0;
+        width: 30%;
     }
     .content-left {
         display: flex;
