--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -77,6 +77,7 @@
         position: absolute;
         left: 0;
         top: 0;
+        width: 30%;
     }
 }
 
@@ -95,6 +96,14 @@
             div:nth-child(2) {
                 width: unset !important;
             }
+            button {
+                position: absolute !important;
+                bottom: -72px;
+                left: 50%;
+                transform: translate(-50%);
+                margin: 0 !important;
+            }
+            
         }
     }
 }
