--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -15,25 +15,33 @@
 }
 
 .portfolio-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10% 0 8.8%;
     position: relative;
     margin-bottom: 100px;
+    margin-top: 10%;
     .headline-portfolio {
-        margin-top: 200px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
         color: var(--white);
-        font-size: 90px;
+        font-size: 6.25vw;
         font-family: 'Poppins bold';
-        img:nth-child(1) {
-            width: 109px;
-            margin-right: 20px;
+        img {
+            height: 4px;
+        }
+        img:first-child {
+            width: 7.569vw;            ;
+            margin-right: 1.389vw;
         }
         div {
-            margin-right: 20px
+            margin-right: 25.389vw;
         }
-        img:nth-child(2) {
-            width: 484px;
+        img:last-child {
+            width: 33.611vw;
+            position: absolute;
+            right: 0;
         }
     }
     .subtext-portfolio {
@@ -46,11 +54,12 @@
         align-items: center;
         margin: auto;
         margin-top: 100px;
-        width: 80%;
-        justify-content: space-around;
+        width: 100%;
+        justify-content: space-between;
+        box-sizing: border-box;
         img {
-            width: 620px;
-            height: 339px;
+            width: 43.056vw;
+            height: 23.542vw;
             object-fit: contain;
         }
         .content-right {
@@ -58,7 +67,7 @@
             flex-direction: column;
             height: 180px;
             justify-content: space-around;
-            width: 450px;
+            width: 52%;
             div:nth-child(1) {
                 color: var(--purple);
                 font-size: 32px;
@@ -78,7 +87,7 @@
             flex-direction: column;
             height: 180px;
             justify-content: space-around;
-            width: 450px;
+            width: 52%;
             text-align: right;
             div:nth-child(1) {
                 color: var(--purple);
@@ -95,6 +104,7 @@
             }
         } 
         .buttons {
+            display: flex;
             .button-right, button {
                 @include buttonStyle();
                 margin-right: 50px;
@@ -120,16 +130,90 @@
     }
     .shadow-left {
         position: absolute;
-        top: 100px;
+        top: 32vw;
         z-index: -1;
         left: 0;
-        width: 650px;
+        width: 30%;
     }
     .shadow-right {
         position: absolute;
-        top: 1200px;
+        top: 63vw;
         z-index: -1;
         right: 0;
+        width: 30%;
+    }
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .portfolio-container {
+        margin-top: 140px;
+        .headline-portfolio {
+            font-size: 45px !important;
+        }
+        .project {
+            flex-direction: column;
+            margin-top: unset !important;
+            margin-bottom: 100px !important;
+            img {
+                width: 320px;
+                height: 240px;
+            }
+            .content-left, .content-right {
+                width: 100%;
+                text-align: center;
+                margin-top: -25px !important;
+            }
+            .content-left {
+                order: 2;
+                div:nth-child(1) {
+                    margin-top: 70px;
+                }
+            }
+            .content-right {
+                order: 1;
+                div:nth-child(1) {
+                    margin-top: 70px;
+                }
+            }
+            .buttons {
+                justify-content: space-evenly !important;
+                margin-top: 20px !important;
+                .button-right, .button-left {
+                    width: 120px;
+                    height: 47px;
+                    font-size: 16px;
+                    margin: unset !important;
+                }
+            }
+        }
+    } 
+}
+
+@media only screen and (min-width: 2000px) {
+    button {
+        width: 11.458vw !important;
+        height: 4.028vw !important;
+        font-size: 1.597vw !important;
+        border-radius: 0.694vw !important;
+    }
+    .portfolio-container {
+        .subtext-portfolio {
+            font-size: 30px !important;
+        }
+        .project {
+            .content-right, .content-left {
+                div:nth-child(1) {
+                    font-size: 50px !important;
+                }
+                div:nth-child(2) {
+                    font-size: 30px !important;
+                }
+                div:nth-child(3) {
+                    font-size: 30px !important;
+                }
+            }
+        }
     }
 }
 
