line in headline portfolio responsiv

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,8 @@
 <div class="portfolio-container" #myportfolio>
     <div class="headline-portfolio">
-        <img src="assets/img/line-left-portfolio.png">
-        <div id="portfolio">Portfolio</div>
-        <img src="assets/img/line-right-portfolio.png">
+        <div></div>
+        <!-- <img src="assets/img/line-left-portfolio.png"> -->
+        <span id="portfolio">Portfolio</span>
     </div>
 
     <div class="subtext-portfolio">This page is a sample of my work - please feel free to try them out.</div>
